// Vitest Snapshot v1

exports[`<IsolateForm /> > should render with source types restricted 1`] = `
<form
  onSubmit={[MockFunction spy]}
>
  <ModalBody>
    <styled.div>
      <SourceType
        allowedSourceTypes={
          [
            "isolate",
            "genotype",
          ]
        }
        onChange={[Function]}
        restrictSourceTypes={true}
        value="isolate"
      />
      <InputGroup>
        <InputLabel>
          Source Name
        </InputLabel>
        <Input
          disabled={false}
          onChange={[Function]}
          value="A"
        />
      </InputGroup>
    </styled.div>
    <InputGroup>
      <InputLabel>
        Isolate Name
      </InputLabel>
      <Input
        readOnly={true}
        value="Isolate A"
      />
    </InputGroup>
  </ModalBody>
  <ModalFooter>
    <SaveButton />
  </ModalFooter>
</form>
`;

exports[`<IsolateForm /> > should render with source types unrestricted 1`] = `
<form
  onSubmit={[MockFunction spy]}
>
  <ModalBody>
    <styled.div>
      <SourceType
        allowedSourceTypes={
          [
            "isolate",
            "genotype",
          ]
        }
        onChange={[Function]}
        restrictSourceTypes={false}
        value="isolate"
      />
      <InputGroup>
        <InputLabel>
          Source Name
        </InputLabel>
        <Input
          disabled={false}
          onChange={[Function]}
          value="A"
        />
      </InputGroup>
    </styled.div>
    <InputGroup>
      <InputLabel>
        Isolate Name
      </InputLabel>
      <Input
        readOnly={true}
        value="Isolate A"
      />
    </InputGroup>
  </ModalBody>
  <ModalFooter>
    <SaveButton />
  </ModalFooter>
</form>
`;
